# rathena

./: .gitignore  CMakeLists.txt  InstallTemplates.cmake  Makefile.in  README.md  compile_commands.json  rAthena.sln
IDE/msproj/: SrcPaths.props
IDE/msproj/vcproj-12/: char-server.vcxproj  login-server.vcxproj  map-server.vcxproj  mapcache.vcxproj
IDE/msproj/vcproj-13/: char-server.vcxproj  char-server.vcxproj.filters  login-server.vcxproj  login-server.vcxproj.filters  map-server.vcxproj  map-server.vcxproj.filters  mapcache.vcxproj  mapcache.vcxproj.filters
IDE/msvc/: rAthena-17.sln
IDE/msvc/vcproj-13/: char-server.vcxproj  char-server.vcxproj.filters  common-minicore.vcxproj  common-minicore.vcxproj.filters  common.vcxproj  libconfig.vcxproj  login-server.vcxproj  login-server.vcxproj.filters  map-cache.vcxproj  map-server.vcxproj  map-server.vcxproj.filters  mt19937ar.vcxproj
IDE/msvc/vcproj-15/: char-server.vcxproj  char-server.vcxproj.filters  common-minicore.vcxproj  common.vcxproj  common.vcxproj.filters  libconfig.vcxproj  libconfig.vcxproj.filters  login-server.vcxproj  login-server.vcxproj.filters  map-cache.vcxproj  map-server.vcxproj  map-server.vcxproj.filters  mt19937ar.vcxproj  mt19937ar.vcxproj.filters  yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
IDE/msvc/vcproj-17/: char-server.vcxproj  char-server.vcxproj.filters  common-minicore.vcxproj  common.vcxproj  common.vcxproj.filters  libconfig.vcxproj  login-server.vcxproj  map-cache.vcxproj  map-cache.vcxproj.filters  map-server.vcxproj  mt19937ar.vcxproj  yaml-cpp.vcxproj
Plugin_IpBan/: Plugin_IpBan.cpp  Plugin_IpBan.h  Plugin_IpBan.vcxproj  Plugin_IpBan.vcxproj.filters
conf/: battle_athena.conf  char_athena.conf  doxyconf  inter_athena.conf  log_athena.conf  login_athena.conf  map_athena.conf  packet_athena.conf  script_athena.conf
ide/msvc/: char-server.vcxproj  char-server.vcxproj.filters  common-minicore.vcxproj.filters  common.vcxproj  libconfig.vcxproj.filters  login-server.vcxproj  map-cache.vcxproj  map-cache.vcxproj.filters  map-server.vcxproj  map-server.vcxproj.filters  mt19937ar.vcxproj.filters  rAthena-15.sln
src/: CMakeLists.txt  Makefile
src/char/: CMakeLists.txt  Makefile.in  char-server.vcxproj  char-server.vcxproj.filters  char.c  char.cpp  char.h  char_clif.c  char_clif.cpp  char_clif.h  char_cnslif.cpp  char_cnslif.h  char_logif.c  char_logif.cpp  char_logif.h  char_mapif.c  char_mapif.cpp  char_mapif.h  int_achievement.c  int_achievement.cpp  int_auction.c  int_auction.cpp  int_clan.cpp  int_clan.h  int_elemental.cpp  int_guild.c  int_guild.cpp  int_guild.h  int_homun.cpp  int_homun.h  int_mail.c  int_mail.cpp  int_mail.h  int_mercenary.c  int_mercenary.cpp  int_mercenary.h  int_party.c  int_party.cpp  int_party.h  int_pet.cpp  (+10 more)
src/common/: CMakeLists.txt  Makefile.in  c_Module.cpp  c_Module.h  c_rAString.cpp  c_rAString.h  c_timer.cpp  c_timer.h  cli.cpp  common-minicore.vcxproj  common-minicore.vcxproj.filters  common.vcxproj  common.vcxproj.filters  core.c  core.cpp  core.h  crashDumper.cpp  crashDumper.hpp  db.cpp  db.h  ers.cpp  ers.h  evdp_epoll.c  grfio.cpp  mapindex.cpp  md5calc.cpp  mempool.cpp  mmo.h  msg_conf.cpp  netbuffer.c  nullpo.cpp  raconf.cpp  showmsg.cpp  socket.c  sql.c  sql.cpp  sql.h  sql.hpp  strlib.cpp  strlib.h  (+4 more)
src/common_old/: CMakeLists.txt  Makefile  atomic.h  cbasetypes.h  cli.cpp  cli.h  conf.cpp  conf.h  core.cpp  core.h  db.cpp  db.h  des.cpp  des.h  enum_operators.h  ers.cpp  ers.h  evdp.h  evdp_epoll.c  grfio.cpp  grfio.h  malloc.cpp  malloc.h  mapindex.cpp  mapindex.h  md5calc.cpp  md5calc.h  mempool.cpp  mempool.h  mmo.h  msg_conf.cpp  msg_conf.h  mutex.cpp  mutex.h  netbuffer.c  netbuffer.h  network.c  network.h  nullpo.cpp  nullpo.h  (+24 more)
src/config/: const.h  core.h  packets.h  secure.h
src/config/classes/: general.h
src/custom/: defines_post.h  defines_pre.h
src/login/: CMakeLists.txt  Makefile.in  account.cpp  account.h  ipban.cpp  ipban.h  ipban.hpp  login-server.vcxproj  login-server.vcxproj.filters  login.cpp  login.h  loginchrif.cpp  loginchrif.h  loginclif.cpp  loginclif.h  logincnslif.cpp  logincnslif.h  loginlog.cpp  loginlog.h
src/map/: CMakeLists.txt  Makefile.in  achievement.c  achievement.cpp  achievement.h  atcommand.cpp  atcommand.h  battle.cpp  battle.h  battleground.cpp  battleground.h  buyingstore.cpp  buyingstore.h  cashshop.cpp  cashshop.h  channel.cpp  channel.h  chat.cpp  chat.h  chrif.cpp  chrif.h  clan.c  clan.cpp  clan.h  clif.cpp  clif.h  clif_obfuscation.h  clif_packetdb.h  clif_shuffle.h  date.cpp  date.h  duel.cpp  duel.h  elemental.cpp  elemental.h  guild.cpp  guild.h  homunculus.c  homunculus.cpp  homunculus.h  (+52 more)
src/test/: basic_test.vcxproj  basic_test.vcxproj.filters  basictest.cpp  test_crashDump.cpp  test_crashDump.hpp
src/tool/: CMakeLists.txt  Makefile.in  mapcache.cpp
tools/: restyle.sh
tools/docker/: docker-compose.yml
